# LBO-Model-Generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_IMPLEMENTATION_STATUS.md  AlphaCo_config.json  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DOCUMENTATION_UPDATE_SUMMARY.md  DataCore_config.json  GITHUB_COMMIT_INSTRUCTIONS.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  NOTICE  ORGANIZATION_SUMMARY_2024.md  PRE_COMMIT_CHECKLIST.md  README.md  REFACTORING_SUMMARY.md  REMAINING_ITEMS.md  REPOSITORY_READY.md  SIDEBAR_NAVIGATION_GUIDE.md  SIDEBAR_TROUBLESHOOTING.md  STREAMLIT_AUDIT_2025.md  STREAMLIT_AUDIT_REPORT.md  STREAMLIT_TEST_COMPARISON.md  SentinelGuard_config.json  VectorServe_config.json  app.py  code_audit.py  compare_streamlit_test.py  interactive_test.py  push_to_github.sh  pyproject.toml  requirements.txt  run.py  set_api_key.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: README.md  config.toml
docs/: AI_FEATURES_SUMMARY.md  CASH_FLOW_SWEEP_IMPLEMENTATION.md  DEBT_VALIDATION.md  README_AI_INTEGRATION.md  README_AI_VALIDATOR.md  README_LBO_GENERATOR.md
docs/development/: CODE_QUALITY.md  PEP8_COMPLIANCE_REPORT.md  PEP8_COMPLIANCE_REPORT_2025.md
docs/guides/: API_KEY_SETUP.md  INTERACTIVE_TEST_GUIDE.md  INTERACTIVE_TEST_SUMMARY.md  (+5 more)
examples/: ai_recommendations_output.json  lbo_input_template.json
pages/: 1_📊_Dashboard.py  2_⚙️_Assumptions.py  3_📈_Analysis.py  4_ℹ️_Help.py
src/: __init__.py  lbo_ai_recommender.py  lbo_ai_validator.py  lbo_chart_improvements.py  lbo_consistency_helpers.py  lbo_constants.py  lbo_engine.py  lbo_excel_helpers.py  lbo_excel_template.py  lbo_exceptions.py  lbo_industry_excel.py  lbo_industry_standards.py  lbo_input_generator.py  lbo_logging.py  lbo_model_auditor.py  lbo_model_generator.py  lbo_validation.py  lbo_validation_enhanced.py
streamlit_modules/: __init__.py  app_analysis.py  app_config.py  app_export.py  app_performance.py  app_ui.py  app_utils.py  app_visualizations.py
tests/: TEST_UPDATES.md  __init__.py  ai_test_company.json  base_test_case.json  base_test_case.json.backup  test_ai_mock.py  test_ai_with_key.py  test_debt_validation.py  test_improvements.py  test_lbo_generator.py  test_streamlit_modules.py
(+6 files in other folders)
