[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbo-model-generator"
version = "1.0.0"
description = "A comprehensive tool for generating Leveraged Buyout (LBO) financial models with AI-powered recommendations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sage Hart"}
]
keywords = [
    "lbo",
    "leveraged-buyout",
    "financial-modeling",
    "excel",
    "investment-banking",
    "private-equity",
    "financial-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[project.scripts]
lbo-generate = "src.lbo_input_generator:main"

[project.urls]
Homepage = "https://github.com/SafetyMP/LBO-Model-Generator"
Documentation = "https://github.com/SafetyMP/LBO-Model-Generator/tree/main/docs"
Repository = "https://github.com/SafetyMP/LBO-Model-Generator"
Issues = "https://github.com/SafetyMP/LBO-Model-Generator/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

